k8s/services/sails.yaml
apiVersion: v1
kind: Service
metadata:
  name: sails
spec:
  selector:
    app: sails
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  # loadBalancerIP: "$IMAGE_IP"
