k8s/services/sails-ingress-static-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sails-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sails-ip
  labels:
    app: sails
spec:
  defaultBackend:
    service:
      name: sails
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sails-backend
  labels:
    app: sails
spec:
  type: NodePort
  selector:
    app: sails
    tier: web
  ports:
    - port: 80
      targetPort: 80
